# fer_ros2_mjc_docker

./: .gitignore  README.md  fer_ros2_mjc.repos  fer_ros2_mujoco.repos
.docker/: Dockerfile
docker/: Dockerfile
my_controllers/bringup_changes/: fer_mujoco_ros2_control.launch.py  franka_mujoco_controllers.yaml
my_controllers/fer_fl_controller/: CMakeLists.txt  package.xml
my_controllers/fer_fl_controller/src/: feedback_linearization_node.cpp  mpc_controller_node.cpp
